<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>common_ioniq_electric_sim_sensor_launch</name>
  <version>0.41.1</version>
  <description>The common_ioniq_electric_sim_sensor_launch package</description>
  <maintainer email="dutjdgns@gmail.com">Seonghun Yeo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
