<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>common_ioniq_sensor_launch</name>
  <version>0.41.1</version>
  <description>The common_ioniq_sensor_launch package</description>
  <maintainer email="dutjdgns@gmail.com">Seonghun Yeo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>
  <exec_depend>ouster_ros</exec_depend>

  <exec_depend>autoware_velodyne_monitor</exec_depend>
  <exec_depend>pcd_type_converter</exec_depend>
  <exec_depend>nebula_sensor_driver</exec_depend>
  <exec_depend>nebula_ros</exec_depend>
  <exec_depend>image_rotate</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
